Bug 1156336 - UI to preview Adgroups
Squashed commit of the following:

commit 3b3c6dc6fe65f176aac83e34404eb94e9afcd9a1
Author: Olivier Yiptong <olivier@olivieryiptong.com>
Date:   Tue Apr 28 01:55:49 2015 -0400

    toggle control label for "locales" instead of "all"

commit 07628be3e4ffd1c6a8ac198b59afba991b826265
Author: Olivier Yiptong <olivier@olivieryiptong.com>
Date:   Tue Apr 28 01:55:12 2015 -0400

    remove extra ng-hide from tiles_list

commit b296493471d8324bc69d6e1f80c1ee43ecde47fb
Author: Olivier Yiptong <olivier@olivieryiptong.com>
Date:   Tue Apr 28 01:51:36 2015 -0400

    add toggle controls to make reviewing easier

commit cbc45f35fa911e5edc10e4c7a26b933d967dc13f
Author: Olivier Yiptong <olivier@olivieryiptong.com>
Date:   Mon Apr 27 23:22:45 2015 -0400

    update bootstrap to 3.3.4

commit 62d47c3a2fc30c86d042d16d6fac089f4fce9a79
Author: Olivier Yiptong <olivier@olivieryiptong.com>
Date:   Mon Apr 27 23:14:21 2015 -0400

    refactor tiles list into an angular directive

commit e1b06342e0b96caccc34d039c2a8c5996904c6fc
Author: Olivier Yiptong <olivier@olivieryiptong.com>
Date:   Mon Apr 27 23:13:13 2015 -0400

    remove extra console log in distribution.js

commit 9a83bbc2ad251095087bfdc5a68b0b5b950089ea
Author: Olivier Yiptong <olivier@olivieryiptong.com>
Date:   Mon Apr 27 22:53:35 2015 -0400

    enable adgroups preview by parsing input

closes #57
fixes bug 1156336

--- a/splice/static/css/spliceApp.css
+++ b/splice/static/css/spliceApp.css
@@ -3,6 +3,11 @@
     background-repeat: no-repeat;
     width: 290px;
     height: 180px;
+    border: 1px solid transparent;
+}
+
+.enhanced-img-absent {
+    border: 1px dashed #CCC;
 }
 
 .tile {
@@ -141,4 +146,17 @@ ol.tiles-list > li:before {
     border-radius: 0;
     background-image: none;
     background-color: inherit;
+}
+
+.tile-listing {
+    clear: both;
+    padding: 10px 0 0 30px;
+}
+
+.toggle-control {
+    text-align: right;
+}
+
+.toggle-control .btn-group {
+    margin-left: 20px;
 }
